# datengenerator-frontend-rs

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs
