[package]
name = "sycamore_datengenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "*"
sycamore-futures = "*"
sycamore-router = "*"
js-sys = "*"



[dependencies.sycamore]
version = "0.8.2"

[dependencies.reqwest]
version = "*"
features = ["json"]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 's' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
